Refatoração: alteração de double para Bigdecimal e atualização dos testes